# jDaLog

./: .cproject  .gitignore  .project  Makefile  Readme.md  archive.sh  autostart.sh  backup_all  build_git_header.py  callback.c  callback.h  compress_data  config.json  config_example.json  config_wb.json  filters.h  floatLog.cpp  floatLog.h  in.cpp  in.h  in_idb.h.old  in_to_maria.cpp  in_to_maria.h  incrementBuild.sh  info.txt  inout.h  install.txt  interface.cpp  interface.h  interface_GS308E.cpp  interface_S1200.cpp  interface_S1200.h  interface_adam6052.cpp  interface_adam6052.h  interface_darksky.cpp  interface_darksky.h  interface_fijnstof.cpp  interface_fijnstof.h  interface_fridge.cpp  interface_fridge.h  (+79 more)
doc/: changes.txt  crossbuild_eclipse.txt  info.txt  install.txt  k8055_notes.txt  serial_debian.txt  todo.txt  yum.txt
eclipse/: config.h  git_header.h
src/: CMakeLists.txt  config.h.in  equation.cpp  equation.h  equator.cpp  equator.h  filters.c  floatLog.cpp  floatLog.h  in.cpp  in.h  in_equation.cpp  in_equation.h  in_from_dir.cpp  in_from_dir.h  interface.cpp  interface.h  interface_2B.cpp  interface_2B.h  interface_GS308E.h  interface_S1200.cpp  interface_S1200.h  interface_S7.cpp  interface_S7.h  interface_adam6052.cpp  interface_circulac.cpp  interface_circulac.h  interface_darksky.h  interface_dcmr.cpp  interface_dcmr.h  interface_dcmr_sensor.cpp  interface_dcmr_sensor.h  interface_fijnstof.cpp  interface_fijnstof.h  interface_fridge.h  interface_fritz.cpp  interface_fritz.h  interface_host.cpp  interface_host.h  interface_hs110.cpp  (+60 more)
src/unused/: logic_power.h  mytime.cpp  mytime.h
